@@ -1,4 +1,5 @@
 2.4.2
+ - SQL identifier quoting
  - schema mapping
 
 2.4.1
